--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Hey Yash</title>
+    <title>Hey Yashhhhh</title>
 
     <style>
         body {
